--- a/styles/app.css
+++ b/styles/app.css
@@ -167,7 +167,8 @@ body {
 
 @media (max-width: 767px) {
   .sponsor-logo {
-    max-width: 80%; } }
+    max-width: 80%;
+    margin-bottom: 35px; } }
 @media (min-width: 768px) {
   .sponsor-logo {
     margin-right: 35px; } }
